# ledger-accounting

./: .gitignore  Cargo.toml  Dockerfile  Makefile  PROJECT_PLAN.md  README.md  build.rs
.github/workflows/: ci.yml
migrations/: 20240101000001_init_schema.sql  20240101000002_set_serializable.sql  20240101000003_restore_immutable_entries.sql
migrations/20260706000001_create_ledger_schema/: down.sql  up.sql
migrations/20260706000002_seed_chart_of_accounts/: down.sql  up.sql
proto/: ledger.proto
src/: account.rs  accounts.rs  asset.rs  audit.rs  authtoken.rs  chart.rs  chart_of_accounts.rs  config.rs  db.rs  grpc.rs  handlers.rs  hashchain.rs  lib.rs  main.rs  posting.rs  snapshot.rs  store.rs  treasury.rs
tests/: invariants.rs  pg_integration.rs  stage1_acceptance.rs
