[package]
name = "ledger-accounting"
version = "0.1.0"
edition = "2021"

[lib]
name = "ledger_accounting"
path = "src/lib.rs"

[[bin]]
name = "ledger-accounting"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"
tonic = "0.12"
prost = "0.13"
tonic-reflection = "0.12"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"

[build-dependencies]
tonic-build = "0.12"