[package]
name = "ledger-accounting"
version = "0.1.0"
edition = "2021"

[lib]
name = "ledger_accounting"
path = "src/lib.rs"

[[bin]]
name = "ledger-accounting"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7"] }
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"
sqlx = { version = "0.9", default-features = false, features = ["postgres", "runtime-tokio", "tls-none", "derive"] }
tonic = "0.12"
prost = "0.13"
tonic-reflection = "0.12"
rdkafka = { version = "0.36", features = ["tokio"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"], default-features = false }
tracing-opentelemetry = "0.28"
jsonwebtoken = "9"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
sqlx = { version = "0.9", default-features = false, features = ["postgres", "runtime-tokio", "tls-none"] }

[build-dependencies]
tonic-build = "0.12"